corrected spacing for top and bottom cards

--- a/src/styles/layout/Home/services.scss
+++ b/src/styles/layout/Home/services.scss
@@ -62,7 +62,7 @@
           }
 
           & p{
-            margin: 2rem auto;
+            // margin: 2rem auto;
             width: 70%;
           }  
       }
@@ -104,7 +104,7 @@
         }
 
         & p{
-          margin: 2rem auto;
+          // margin: 2rem auto;
           width: 70%;
         }
       }
